# rubik-algorithm

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  _typos.toml  compose.yaml  docker-compose.yml  format_macro_code.py  index.html  justfile  macros.py  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: deploy.yml  test.yml
docs/: f2l.md  index.md  oll.md  pll.md
f2l/: index.html
oll/: index.html
pll/: index.html
rubik/: __init__.py  app.py  models.py
rubik_algorithm/: __init__.py  __main__.py
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
site/assets/javascripts/: bundle.79ae519e.min.js
site/f2l/: index.html
site/oll/: index.html
site/pll/: index.html
site/search/: search_index.json
site/site/: 404.html  index.html
site/site/pll/: index.html
site/site/search/: search_index.json
templates/: base.html  home.html
tests/: image_test.py  movements_test.py  oll_test.py  pll_test.py  unchanged_test.py
