[build-system]
requires = ["hatchling == 1.27.0"]
build-backend = "hatchling.build"

[project]
name = "rubik-algorithm"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mkdocs-macros-plugin==1.4.0",
    "mkdocs-material==9.6.22",
    "mkdocs-site-urls==0.3.1",
    "numpy==2.3.4",
]

[dependency-groups]
dev = [
    "mypy==1.18.2",
    "pre-commit==4.3.0",
    "pytest-cov==7.0.0",
    "ruff==0.14.2",
]

[tool.ruff]
line-length = 100
fix = true

[tool.ruff.lint]
select = ["E", "F", "I", "PT", "UP"]

[tool.mypy]
strict = true
pretty = true
