[build-system]
requires = ["hatchling == 1.27.0"]
build-backend = "hatchling.build"

[project]
name = "rubik-algorithm"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mkdocs-macros-plugin==1.5.0",
    "mkdocs-material==9.7.6",
    "mkdocs-site-urls==0.3.1",
    "numpy==2.4.4",
]

[dependency-groups]
dev = [
    "mypy==1.20.0",
    "pre-commit==4.5.1",
    "pytest-cov==7.1.0",
    "ruff==0.15.9",
]

[tool.ruff]
line-length = 100
fix = true

[tool.ruff.lint]
select = ["E", "F", "I", "PT", "UP"]

[tool.mypy]
strict = true
pretty = true
